i think i can't get the image fixed on ios

--- a/public/mixins/main.scss
+++ b/public/mixins/main.scss
@@ -8,8 +8,8 @@
     background: {
         repeat: no-repeat;
         position: center center;
-        attachment: fixed;
-        size: scroll;
+        attachment: scroll;
+        size: cover;
     }
 
     // -webkit-background-size: cover;
